@@ -20,6 +20,7 @@
 
 package playground.agarwalamit.mixedTraffic.FDTestSetUp;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.util.ArrayList;
@@ -27,11 +28,11 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
 
 import org.apache.log4j.FileAppender;
 import org.apache.log4j.Logger;
 import org.apache.log4j.PatternLayout;
+import org.jfree.util.Log;
 import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.Scenario;
 import org.matsim.api.core.v01.network.Link;
@@ -39,8 +40,11 @@ import org.matsim.api.core.v01.population.Person;
 import org.matsim.contrib.otfvis.OTFVis;
 import org.matsim.core.api.experimental.events.EventsManager;
 import org.matsim.core.config.ConfigUtils;
+import org.matsim.core.config.groups.QSimConfigGroup.LinkDynamics;
+import org.matsim.core.config.groups.QSimConfigGroup.TrafficDynamics;
 import org.matsim.core.events.EventsUtils;
 import org.matsim.core.events.algorithms.EventWriterXML;
+import org.matsim.core.gbl.MatsimRandom;
 import org.matsim.core.mobsim.framework.AgentSource;
 import org.matsim.core.mobsim.framework.MobsimAgent;
 import org.matsim.core.mobsim.framework.MobsimDriverAgent;
@@ -51,7 +55,6 @@ import org.matsim.core.mobsim.qsim.interfaces.MobsimVehicle;
 import org.matsim.core.mobsim.qsim.interfaces.Netsim;
 import org.matsim.core.mobsim.qsim.qnetsimengine.QNetsimEngine;
 import org.matsim.core.network.NetworkImpl;
-import org.matsim.core.utils.collections.Tuple;
 import org.matsim.vehicles.Vehicle;
 import org.matsim.vehicles.VehicleType;
 import org.matsim.vehicles.VehicleUtils;
@@ -67,42 +70,40 @@ import playground.agarwalamit.mixedTraffic.MixedTrafficVehiclesUtils;
 
 public class GenerateFundamentalDiagramData {
 
-	static final Logger log = Logger.getLogger(GenerateFundamentalDiagramData.class);
+	static final Logger LOG = Logger.getLogger(GenerateFundamentalDiagramData.class);
 
-	static boolean PASSING_ALLOWED = false;
-	static boolean SEEPAGE_ALLOWED = false;
-	private final boolean LIVE_OTFVis = false;
-	static boolean WITH_HOLES = false;
-	static String RUN_DIR ;
-	public boolean isPlottingDistribution = false;
-
-	static boolean writeInputFiles = true; // includes config,network and plans
-
-	static String[] TRAVELMODES;	
-	static Double[] MODAL_SPLIT; 
+	private String runDir ;
+	private boolean isDumpingInputFiles = true; // includes config, network
+	private boolean isWritingEventsFileForEachIteration = false;
+	
+	private String[] travelModes;	
+	private Double[] modalSplitInPCU;
+	
+	private boolean isUsingLiveOTFVis = false;
+	private boolean isPlottingDistribution = false;
 
 	private int reduceDataPointsByFactor = 1;
 
 	private int flowUnstableWarnCount [] ;
 	private int speedUnstableWarnCount [] ;
 
-	private static InputsForFDTestSetUp inputs;
+	private InputsForFDTestSetUp inputs;
 	private PrintStream writer;
 	private Scenario scenario;
 
 	static GlobalFlowDynamicsUpdator globalFlowDynamicsUpdator;
-	static PassingEventsUpdator passingEventsUpdator;
+	private PassingEventsUpdator passingEventsUpdator;
 	private Map<Id<VehicleType>, TravelModesFlowDynamicsUpdator> mode2FlowData;
+	private final Map<Id<Person>, String> person2Mode = new HashMap<Id<Person>, String>();
 
-	private Integer[] STARTING_POINT;
-	private Integer [] MAX_AGENT_DISTRIBUTION;
-	private Integer [] Step_Size;
-
-	/**
-	 * Overall density to vehicular flow and speed.
-	 */
-	private Map<Double, Map<String, Tuple<Double, Double>>> outData = new HashMap<Double, Map<String,Tuple<Double,Double>>>();
-	public static String HOLE_SPEED = "15";
+	private Integer[] startingPoint;
+	private Integer [] maxAgentDistribution;
+	private Integer [] stepSize;
+	
+	
+	public GenerateFundamentalDiagramData (final InputsForFDTestSetUp inputs){
+		this.inputs = inputs;
+	}
 
 	public static void main(String[] args) {
 		
@@ -114,65 +115,65 @@ public class GenerateFundamentalDiagramData {
 			
 			args = new String [8];
 			
-			String my_dir = "../../../../repos/shared-svn/projects/mixedTraffic/triangularNetwork/run313/";
-			String outFolder ="/carBikePassing/";
+			String myDir = "../../../../repos/shared-svn/projects/mixedTraffic/triangularNetwork/run313/";
+			String outFolder ="/carBikeHolesPassing/";
 			
-			args[0] = my_dir + outFolder ;
+			args[0] = myDir + outFolder ;
 			args[1] = "car,bike"; // travel (main) modes
 			args[2] = "1.0,1.0"; // modal split in pcu
-			args[3] = "true"; // isPassingAllowed
-			args[4] = "false"; // isSeepageAllowed
-			args[5] = "false"; // isUsingHoles
-			args[6] = "10"; // reduce number of data points by this factor
-			args[7] = "false"; // is plotting modal split distribution
+			args[3] = TrafficDynamics.withHoles.toString(); // isUsingHoles
+			args[4] = LinkDynamics.PassingQ.toString(); // isPassingAllowed
+			args[5] = "5"; // reduce number of data points by this factor
+			args[6] = "false"; // is plotting modal split distribution
 		}
 		
-		GenerateFundamentalDiagramData generateFDData = new GenerateFundamentalDiagramData();
+		InputsForFDTestSetUp inputs = new InputsForFDTestSetUp();
+		inputs.setTravelModes(args[1].split(","));
+		inputs.setModalSplit(args[2].split(",")); //in pcu
+		inputs.setTrafficDynamics(TrafficDynamics.valueOf( args[3]));
+		inputs.setLinkDynamics(LinkDynamics.valueOf( args[4]));
 		
+		GenerateFundamentalDiagramData generateFDData = new GenerateFundamentalDiagramData(inputs);
 		generateFDData.setRunDirectory(args[0]);
-		generateFDData.setTravelModes(args[1].split(","));
-		generateFDData.setModalSplit(args[2].split(",")); //in pcu
-		generateFDData.setPassingAllowed(Boolean.valueOf(args[3]));
-		generateFDData.setSeepageAllowed(Boolean.valueOf(args[4]));
-		generateFDData.setUseHoles(Boolean.valueOf(args[5]));
-		generateFDData.setReduceDataPointsByFactor(Integer.valueOf(args[6]));
-		generateFDData.setIsPlottingDistribution(Boolean.valueOf(args[7]));
-		
-		generateFDData.setWriteInputFiles(true); 
+		generateFDData.setReduceDataPointsByFactor(Integer.valueOf(args[5]));
+		generateFDData.setIsPlottingDistribution(Boolean.valueOf(args[6]));
+		generateFDData.setIsUsingLiveOTFVis(false);
+		generateFDData.setIsWritingEventsFileForEachIteration(true);
 		generateFDData.run();
 	}
 
 	private void consistencyCheckAndInitialize(){
-		if(writeInputFiles) {
+		if(isDumpingInputFiles) {
 			createLogFile();
 		}
 
-		if (TRAVELMODES.length != MODAL_SPLIT.length){
-			throw new RuntimeException("Modal split for each travel mode is necessray parameter, it is not defined correctly. Check your static variable!!! \n Aborting ...");
+		if(isDumpingInputFiles && runDir==null) throw new RuntimeException("Config, nework and plan file can not be written without a directory location.");
+		if(runDir==null) throw new RuntimeException("Location to write data for FD is not set. Aborting...");
+		
+		if(reduceDataPointsByFactor != 1) {
+			LOG.info("===============");
+			LOG.warn("Number of modes for each mode type in FD will be reduced by a factor of "+reduceDataPointsByFactor+". "+
+					"Make sure this is what you want because it will be more likely to have less or no points in congested regime in absence of queue model with holes.");
+			LOG.info("===============");
 		}
-
-		if(PASSING_ALLOWED) log.info("=======Passing is allowed.========");
-		if(SEEPAGE_ALLOWED) log.info("=======Seepage is allowed.========");
-		if(WITH_HOLES) log.info("======= Using double ended queue.=======");
-
-		if(writeInputFiles && RUN_DIR==null) throw new RuntimeException("Config, nework and plan file can not be written without a directory location.");
-		if(RUN_DIR==null) throw new RuntimeException("Location to write data for FD is not set. Aborting...");
-
-		flowUnstableWarnCount = new int [TRAVELMODES.length];
-		speedUnstableWarnCount = new int [TRAVELMODES.length];
+		
+		if(isWritingEventsFileForEachIteration) Log.warn("This will write one event file corresponding to each iteration and thus ");
 	}
 
 	public void run(){
-
 		consistencyCheckAndInitialize();
-
-		inputs = new InputsForFDTestSetUp();
 		inputs.run();
+		travelModes = inputs.getTravelModes();
+		modalSplitInPCU = inputs.getModalSplit();
+		if(isDumpingInputFiles) inputs.dumpInputFiles(runDir);
+		
 		scenario = inputs.getScenario();
 
 		mode2FlowData = inputs.getTravelMode2FlowDynamicsData();
+		flowUnstableWarnCount = new int [travelModes.length];
+		speedUnstableWarnCount = new int [travelModes.length];
 
-		openFileAndWriteHeader(RUN_DIR+"/data.txt");
+		openFileAndWriteHeader(runDir+"/data.txt");
 
 		if(isPlottingDistribution){
 			parametricRunAccordingToDistribution();	
@@ -182,76 +183,58 @@ public class GenerateFundamentalDiagramData {
 	}
 
 	public void setRunDirectory(String runDir) {
-		RUN_DIR = runDir;
+		this.runDir = runDir;
 	}
-
-	public void setPassingAllowed(boolean isPassingAllowed) {
-		PASSING_ALLOWED = isPassingAllowed;
-	}
-
-	public void setSeepageAllowed(boolean isSeepageAllowed) {
-		SEEPAGE_ALLOWED = isSeepageAllowed;
-	}
-
-	public void setWriteInputFiles(boolean writeInputFiles) {
-		GenerateFundamentalDiagramData.writeInputFiles = writeInputFiles;
-	}
-
-	public void setTravelModes(String[] travelModes) {
-		TRAVELMODES = travelModes;
-	}
-
-	public void setModalSplit(String [] modalSplit) {
-		MODAL_SPLIT = new Double [modalSplit.length];
-		for (int ii = 0; ii <modalSplit.length; ii ++){
-			MODAL_SPLIT [ii] = Double.valueOf(modalSplit[ii]);
-		}
-	}
-
+	
 	public void setReduceDataPointsByFactor(int reduceDataPointsByFactor) {
 		this.reduceDataPointsByFactor = reduceDataPointsByFactor;
-	}
-
-	public void setUseHoles(boolean isUsingHole) {
-		WITH_HOLES = isUsingHole;
 	}
 
 	public void setIsPlottingDistribution(boolean isPlottingDistribution) {
 		this.isPlottingDistribution = isPlottingDistribution;
 	}
 
-	public Map<Double, Map<String, Tuple<Double, Double>>> getOutData() {
-		return outData;
+	public void setIsUsingLiveOTFVis(boolean liveOTFVis) {
+		this.isUsingLiveOTFVis = liveOTFVis;
 	}
 
+	public void setIsWritingEventsFileForEachIteration(
+			boolean isWritingEventsFileForEachIteration) {
+		this.isWritingEventsFileForEachIteration = isWritingEventsFileForEachIteration;
+	}
+	
+	public void setIsDumpingInputFiles(boolean isDumpingInputFiles){
+		this.isDumpingInputFiles = isDumpingInputFiles;
+	}
+	
 	private void parametricRunAccordingToGivenModalSplit(){
 
-		//		Creating minimal configuration respecting modal split in PCU and integer agent numbers
+		//	Creating minimal configuration respecting modal split in PCU and integer agent numbers
 		List<Double> pcus = new ArrayList<Double>();
-		for(int index =0 ;index<TRAVELMODES.length;index++){
-			double tempPCU = MixedTrafficVehiclesUtils.getPCU(TRAVELMODES[index]);
+		for(int index =0 ;index<travelModes.length;index++){
+			double tempPCU = MixedTrafficVehiclesUtils.getPCU(travelModes[index]);
 			pcus.add(tempPCU);
 		}
 
 		List<Integer> minSteps = new ArrayList<Integer>();
-		for (double modalSplit : Arrays.asList(MODAL_SPLIT)){
-			minSteps.add(new Integer((int) (modalSplit*100)));
+		for (double modalSplit : Arrays.asList(modalSplitInPCU)){
+			minSteps.add(Integer.valueOf( (int) modalSplit*100) ) ;
 		}
 
 		int commonMultiplier = 1;
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			double pcu = pcus.get(i);
 			//heavy vehicles
-			if ((pcu>1) && ((minSteps.get(i))%pcu != 0)){
+			if ( (pcu>1) && (minSteps.get(i)%pcu != 0) ){
 				double lcm = getLCM((int) pcu, minSteps.get(i));
 				commonMultiplier *= lcm/minSteps.get(i);
 			}
 		}
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			minSteps.set(i, (int) (minSteps.get(i)*commonMultiplier/pcus.get(i)));
 		}
 		int pgcd = getGCDOfList(minSteps);
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			minSteps.set(i, minSteps.get(i)/pgcd);
 		}
 
@@ -259,62 +242,61 @@ public class GenerateFundamentalDiagramData {
 			minSteps.set(0, 1);
 		}
 
-		// for a faster simulation or to have less points on FD, minSteps is increased
 		if(reduceDataPointsByFactor!=1) {
-			log.info("===============");
-			log.warn("Data points for FD will be reduced by a factor of "+reduceDataPointsByFactor+". "+
-					"Make sure this is what you want because it will be more likely to have less or no points in congested regime.");
-			log.info("===============");
 			for(int index=0;index<minSteps.size();index++){
 				minSteps.set(index, minSteps.get(index)*reduceDataPointsByFactor);
 			}
 		}
+		
 		//set up number of Points to run.
 		double cellSizePerPCU = ((NetworkImpl) scenario.getNetwork()).getEffectiveCellSize();
 		double networkDensity = (InputsForFDTestSetUp.LINK_LENGTH/cellSizePerPCU) * 3 * InputsForFDTestSetUp.NO_OF_LANES;
 		double sumOfPCUInEachStep = 0;
-		for(int index=0;index<TRAVELMODES.length;index++){
-			sumOfPCUInEachStep +=  minSteps.get(index) * MixedTrafficVehiclesUtils.getPCU(TRAVELMODES[index]);
+	
+		for(int index=0;index<travelModes.length;index++){
+			sumOfPCUInEachStep +=  minSteps.get(index) * MixedTrafficVehiclesUtils.getPCU(travelModes[index]);
 		}
 		int numberOfPoints = (int) Math.ceil(networkDensity/sumOfPCUInEachStep) +5;
 
 		List<List<Integer>> pointsToRun = new ArrayList<List<Integer>>();
 		for (int m=1; m<numberOfPoints; m++){
 			List<Integer> pointToRun = new ArrayList<Integer>();
-			for (int i=0; i<GenerateFundamentalDiagramData.TRAVELMODES.length; i++){
+			for (int i=0; i<travelModes.length; i++){
 				pointToRun.add(minSteps.get(i)*m);
 			}
-			log.info("Number of Agents - \t"+pointToRun);
+			LOG.info("Number of Agents - \t"+pointToRun);
 			pointsToRun.add(pointToRun);
 		}
 
-		//Effective iteration over all points 
 		for ( int i=0; i<pointsToRun.size(); i++){
 			List<Integer> pointToRun = pointsToRun.get(i);
-			log.info("Going into run where number of Agents are - \t"+pointToRun);
+			LOG.info("===============");
+			LOG.info("Going into run where number of Agents are - \t"+pointToRun);
+			Log.info("Further, " + (pointsToRun.size() - i) +" combinations will be simulated.");
+			LOG.info("===============");
 			this.singleRun(pointToRun);
 		}
 	}
 
 	private void parametricRunAccordingToDistribution(){
 
-		this.STARTING_POINT = new Integer [TRAVELMODES.length];
-		this.Step_Size = new Integer [TRAVELMODES.length];
+		this.startingPoint = new Integer [travelModes.length];
+		this.stepSize = new Integer [travelModes.length];
 
-		for(int ii=0;ii<TRAVELMODES.length;ii++){
-			this.STARTING_POINT [ii] =0;
-			this.Step_Size [ii] = this.reduceDataPointsByFactor*1;
+		for(int ii=0;ii<travelModes.length;ii++){
+			this.startingPoint [ii] =0;
+			this.stepSize [ii] = this.reduceDataPointsByFactor*1;
 		}
-		this.STARTING_POINT = new Integer[] {1,1};
+		this.startingPoint = new Integer[] {1,1};
 
-		MAX_AGENT_DISTRIBUTION = new Integer [TRAVELMODES.length];
+		maxAgentDistribution = new Integer [travelModes.length];
 		double cellSizePerPCU = ((NetworkImpl) this.scenario.getNetwork()).getEffectiveCellSize();
 		double networkDensity = (InputsForFDTestSetUp.LINK_LENGTH/cellSizePerPCU) * 3 * InputsForFDTestSetUp.NO_OF_LANES;
 
-		for(int ii=0;ii<MAX_AGENT_DISTRIBUTION.length;ii++){
-			double pcu = this.mode2FlowData.get(Id.create(TRAVELMODES[ii],VehicleType.class)).getVehicleType().getPcuEquivalents();
+		for(int ii=0;ii<maxAgentDistribution.length;ii++){
+			double pcu = this.mode2FlowData.get(Id.create(travelModes[ii],VehicleType.class)).getVehicleType().getPcuEquivalents();
 			int maxNumberOfVehicle = (int) Math.floor(networkDensity/pcu)+1;
-			MAX_AGENT_DISTRIBUTION[ii] = maxNumberOfVehicle;
+			maxAgentDistribution[ii] = maxNumberOfVehicle;
 		}
 
 		List<List<Integer>> pointsToRun = this.createPointsToRun();
@@ -322,13 +304,13 @@ public class GenerateFundamentalDiagramData {
 		for ( int i=0; i<pointsToRun.size(); i++){
 			List<Integer> pointToRun = pointsToRun.get(i);
 			double density =0;
-			for(int jj = 0; jj < TRAVELMODES.length;jj++ ){
-				double pcu = this.mode2FlowData.get(Id.create(TRAVELMODES[jj],VehicleType.class)).getVehicleType().getPcuEquivalents();
+			for(int jj = 0; jj < travelModes.length;jj++ ){
+				double pcu = this.mode2FlowData.get(Id.create(travelModes[jj],VehicleType.class)).getVehicleType().getPcuEquivalents();
 				density += pcu *pointToRun.get(jj) ;
 			}
 
 			if(density <= networkDensity+5){
-				System.out.println("Going into run "+pointToRun);
+				LOG.info("Going into run "+pointToRun);
 				this.singleRun(pointToRun);
 			} 
 		}
@@ -338,43 +320,40 @@ public class GenerateFundamentalDiagramData {
 
 		int numberOfPoints = 1; 
 
-		for(int jj=0;jj<TRAVELMODES.length;jj++){
-			numberOfPoints *= (int) Math.floor((MAX_AGENT_DISTRIBUTION[jj]-STARTING_POINT[jj])/Step_Size[jj])+1;
+		for(int jj=0;jj<travelModes.length;jj++){
+			numberOfPoints *= (int) Math.floor((maxAgentDistribution[jj]-startingPoint[jj])/stepSize[jj])+1;
 		}
 
-		if(numberOfPoints > 1000) log.warn("Total number of points to run is "+numberOfPoints+". This may take long time. "
+		if(numberOfPoints > 1000) LOG.warn("Total number of points to run is "+numberOfPoints+". This may take long time. "
 				+ "For lesser time to get the data reduce data points by some factor.");
 
 		//Actually going through the n-dimensional grid
-		BinaryAdditionModule iterationModule = new BinaryAdditionModule(Arrays.asList(MAX_AGENT_DISTRIBUTION), Arrays.asList(Step_Size), STARTING_POINT);
+		BinaryAdditionModule iterationModule = new BinaryAdditionModule(Arrays.asList(maxAgentDistribution), Arrays.asList(stepSize), startingPoint);
 		List<List<Integer>> pointsToRun = new ArrayList<List<Integer>>();
 		for (int i=0; i<numberOfPoints; i++){
-			Integer[] newPoint = new Integer[MAX_AGENT_DISTRIBUTION.length];
+			Integer[] newPoint = new Integer[maxAgentDistribution.length];
 			for (int j=0; j<newPoint.length; j++){
-				newPoint[j] = (iterationModule.getPoint())[j];
+				newPoint[j] = iterationModule.getPoint()[j];
 			}
 			pointsToRun.add(Arrays.asList(newPoint));
-			String point = Arraytostring(iterationModule.getPoint());
-			log.info("Just added point "+point+" to the collection.");
+			String point = arraytostring(iterationModule.getPoint());
+			LOG.info("Just added point "+point+" to the collection.");
 			if (i<numberOfPoints-1){
 				iterationModule.add1();
 			}
 		}
-		//System.out.println(pointsToRun.size());
 		return pointsToRun;
 	}
 
 	private void singleRun(List<Integer> pointToRun) {
-		
 		person2Mode.clear();
-		
-		for (int i=0; i<TRAVELMODES.length; i++){
+		for (int i=0; i<travelModes.length; i++){
 			for (int ii = 0; ii < pointToRun.get(i); ii++){
 				Id<Person> personId = Id.createPersonId(person2Mode.size());
-				person2Mode.put(personId,TRAVELMODES[i]);
+				person2Mode.put(personId,travelModes[i]);
 			}
 			
-			this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).setnumberOfAgents(pointToRun.get(i).intValue());
+			this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).setnumberOfAgents(pointToRun.get(i).intValue());
 		}
 
 		EventsManager events = EventsUtils.createEventsManager();
@@ -383,10 +362,17 @@ public class GenerateFundamentalDiagramData {
 		passingEventsUpdator  = new PassingEventsUpdator();
 
 		events.addHandler(globalFlowDynamicsUpdator);
-		events.addHandler(passingEventsUpdator);
+		
+		if(travelModes.length > 1)	events.addHandler(passingEventsUpdator);
 
-		EventWriterXML eventWriter = new EventWriterXML(RUN_DIR+"/events.xml");
-		if(writeInputFiles){
+		EventWriterXML eventWriter = null;
+		
+		if(isWritingEventsFileForEachIteration){
+			String eventsDir = runDir+"/events/";
+			
+			if (! new File(eventsDir).exists() ) new File(eventsDir).mkdir();
+			
+			eventWriter = new EventWriterXML(eventsDir+"/events"+pointToRun.toString()+".xml");
 			events.addHandler(eventWriter);
 		}
 
@@ -395,14 +381,14 @@ public class GenerateFundamentalDiagramData {
 		qSim.run();
 
 		boolean stableState = true;
-		for(int index=0;index<TRAVELMODES.length;index++){
-			Id<VehicleType> veh = Id.create(TRAVELMODES[index], VehicleType.class);
+		for(int index=0;index<travelModes.length;index++){
+			Id<VehicleType> veh = Id.create(travelModes[index], VehicleType.class);
 			if(!mode2FlowData.get(veh).isFlowStable()) 
 			{
 				stableState = false;
 				int existingCount = flowUnstableWarnCount[index]; existingCount++;
 				flowUnstableWarnCount[index] = existingCount;
-				log.warn("Flow stability is not reached for travel mode "+veh.toString()
+				LOG.warn("Flow stability is not reached for travel mode "+veh.toString()
 						+" and simulation end time is reached. Output data sheet will have all zeros for such runs."
 						+ "This is " + flowUnstableWarnCount[index]+ "th warning.");
 				//				log.warn("Increasing simulation time could be a possible solution to avoid it.");
@@ -412,7 +398,7 @@ public class GenerateFundamentalDiagramData {
 				stableState = false;
 				int existingCount = speedUnstableWarnCount[index]; existingCount++;
 				speedUnstableWarnCount[index] = existingCount;
-				log.warn("Speed stability is not reached for travel mode "+veh.toString()
+				LOG.warn("Speed stability is not reached for travel mode "+veh.toString()
 						+" and simulation end time is reached. Output data sheet will have all zeros for such runs."
 						+ "This is " + speedUnstableWarnCount[index]+ "th warning.");
 			}
@@ -430,44 +416,37 @@ public class GenerateFundamentalDiagramData {
 
 		if( stableState ) {
 			writer.format("%d\t",globalFlowDynamicsUpdator.getGlobalData().numberOfAgents);
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%d\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).numberOfAgents);
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%d\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).numberOfAgents);
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentDensity());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentDensity());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentDensity());
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentFlow());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentFlow());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentFlow());
 			}
 			writer.format("%.2f\t", globalFlowDynamicsUpdator.getGlobalData().getPermanentAverageVelocity());
-			for (int i=0; i < TRAVELMODES.length; i++){
-				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentAverageVelocity());
+			for (int i=0; i < travelModes.length; i++){
+				writer.format("%.2f\t", this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getPermanentAverageVelocity());
 			}
-			writer.format("%.2f\t", passingEventsUpdator.getNoOfCarsPerKm());
+			
+			if( travelModes.length > 1 ) {
 
-			writer.format("%.2f\t", passingEventsUpdator.getTotalBikesPassedByAllCarsPerKm());
+				writer.format("%.2f\t", passingEventsUpdator.getNoOfCarsPerKm());
 
-			writer.format("%.2f\t", passingEventsUpdator.getAvgBikesPassingRate());
+				writer.format("%.2f\t", passingEventsUpdator.getTotalBikesPassedByAllCarsPerKm());
+
+				writer.format("%.2f\t", passingEventsUpdator.getAvgBikesPassingRate());
+			}
+			
 			writer.print("\n");
 		}
-		//storing data in map
-		Map<String, Tuple<Double, Double>> mode2FlowSpeed = new HashMap<String, Tuple<Double,Double>>();
-		for(int i=0; i < TRAVELMODES.length; i++){
 
-			Tuple<Double, Double> flowSpeed = 
-					new Tuple<Double, Double>(this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentFlow(),
-							this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getPermanentAverageVelocity());
-			mode2FlowSpeed.put(TRAVELMODES[i], flowSpeed);
-			outData.put(globalFlowDynamicsUpdator.getGlobalData().getPermanentDensity(), mode2FlowSpeed);
-		}
-
-		if(writeInputFiles) eventWriter.closeFile();
+		if(isWritingEventsFileForEachIteration) eventWriter.closeFile();
 	}
-
-	static final Map<Id<Person>, String> person2Mode = new HashMap<Id<Person>, String>();
-
+	
 	private Netsim createModifiedQSim(Scenario sc, EventsManager events) {
 		final QSim qSim = new QSim(sc, events);
 		ActivityEngine activityEngine = new ActivityEngine(events, qSim.getAgentCounter());
@@ -479,9 +458,9 @@ public class GenerateFundamentalDiagramData {
 		qSim.addMobsimEngine(netsimEngine);
 		qSim.addDepartureHandler(netsimEngine.getDepartureHandler());
 
-		log.info("=======================");
-		log.info("Mobsim agents' are directly added to AgentSource.");
-		log.info("=======================");
+		LOG.info("=======================");
+		LOG.info("Mobsim agents' are directly added to AgentSource.");
+		LOG.info("=======================");
 
 		if (sc.getConfig().network().isTimeVariantNetwork()) {
 			qSim.addMobsimEngine(new NetworkChangeEventsEngine());		
@@ -501,7 +480,8 @@ public class GenerateFundamentalDiagramData {
 
 				for ( Id<Person> personId : person2Mode.keySet()) {
 					String travelMode = person2Mode.get(personId);
-					double actEndTime = (new Random().nextDouble())*900;
+					double randDouble = MatsimRandom.getRandom().nextDouble();
+					double actEndTime = randDouble*900;
 
 					MobsimAgent agent = new MySimplifiedRoundAndRoundAgent(personId, actEndTime, travelMode);
 					qSim.insertAgentIntoMobsim(agent);
@@ -515,7 +495,7 @@ public class GenerateFundamentalDiagramData {
 
 		qSim.addAgentSource(agentSource);
 
-		if ( LIVE_OTFVis ) {
+		if ( isUsingLiveOTFVis ) {
 			// otfvis configuration.  There is more you can do here than via file!
 			final OTFVisConfigGroup otfVisConfig = ConfigUtils.addOrGetModule(qSim.getScenario().getConfig(), OTFVisConfigGroup.GROUP_NAME, OTFVisConfigGroup.class);
 			otfVisConfig.setDrawTransitFacilities(false) ; // this DOES work
@@ -535,34 +515,37 @@ public class GenerateFundamentalDiagramData {
 			throw new RuntimeException(e);
 		}
 		writer.print("n \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strn = "n_"+str;
 			writer.print(strn+"\t");
 		}
 		writer.print("k \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strk = "k_"+str;
 			writer.print(strk+"\t");
 		}
 		writer.print("q \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strq = "q_"+str;
 			writer.print(strq+"\t");
 		}
 		writer.print("v \t");
-		for (int i=0; i < TRAVELMODES.length; i++){
-			String str = this.mode2FlowData.get(Id.create(TRAVELMODES[i],VehicleType.class)).getModeId().toString();
+		for (int i=0; i < travelModes.length; i++){
+			String str = this.mode2FlowData.get(Id.create(travelModes[i],VehicleType.class)).getModeId().toString();
 			String strv = "v_"+str;
 			writer.print(strv+"\t");
 		}
-		writer.print("noOfCarsPerkm \t");
+		
+		if( travelModes.length > 1 ) {
+			writer.print("noOfCarsPerkm \t");
 
-		writer.print("totalBikesPassedByAllCarsPerKm \t");
+			writer.print("totalBikesPassedByAllCarsPerKm \t");
 
-		writer.print("avgBikePassingRatePerkm \t");
+			writer.print("avgBikePassingRatePerkm \t");
+		}
 
 		writer.print("\n");
 	}
@@ -571,7 +554,7 @@ public class GenerateFundamentalDiagramData {
 		writer.close();
 	}
 
-	private static String Arraytostring(Integer[] list){
+	private static String arraytostring(Integer[] list){
 		int n = list.length;
 		String str = "";
 		for (int i=0; i<n; i++){
@@ -608,11 +591,11 @@ public class GenerateFundamentalDiagramData {
 		layout.setConversionPattern(conversionPattern);
 		FileAppender appender;
 		try {
-			appender = new FileAppender(layout, RUN_DIR+"/logfile.log",false);
+			appender = new FileAppender(layout, runDir+"/logfile.log",false);
 		} catch (IOException e1) {
 			throw new RuntimeException("File not found.");
 		}
-		log.addAppender(appender);
+		LOG.addAppender(appender);
 	}
 
 	static class MySimplifiedRoundAndRoundAgent implements MobsimAgent, MobsimDriverAgent {
@@ -624,13 +607,6 @@ public class GenerateFundamentalDiagramData {
 		private static final Id<Link> ORIGIN_LINK_ID = Id.createLinkId("home");
 		private static final Id<Link> DESTINATION_LINK_ID = Id.createLinkId("work");
 
-		public MySimplifiedRoundAndRoundAgent(Id<Person> agentId, double actEndTime, String travelMode) {
-			personId = agentId;
-			mode = travelMode;
-			this.actEndTime = actEndTime;
-			this.plannedVehicleId = Id.create(agentId, Vehicle.class);
-		}
-
 		private final Id<Person> personId;
 		private final Id<Vehicle> plannedVehicleId;
 		private final String mode;
@@ -638,6 +614,13 @@ public class GenerateFundamentalDiagramData {
 
 		private MobsimVehicle vehicle ;
 		public boolean isArriving= false;
+		
+		public MySimplifiedRoundAndRoundAgent(Id<Person> agentId, double actEndTime, String travelMode) {
+			personId = agentId;
+			mode = travelMode;
+			this.actEndTime = actEndTime;
+			this.plannedVehicleId = Id.create(agentId, Vehicle.class);
+		}
 
 		private Id<Link> currentLinkId = ORIGIN_LINK_ID;
 		private State agentState= MobsimAgent.State.ACTIVITY;;
